--- a/xbol/index.html
+++ b/xbol/index.html
@@ -26,21 +26,22 @@
     <main>
         <section>
             <section>
-                <div>X</div>
-                <div>O</div>
-                <div>X</div>
+                <div id="b1" onclick="box_alert(1)"></div> 
+                <div id="b4" onclick="box_alert(4)"></div>
+                <div id="b7" onclick="box_alert(7)"></div>
             </section>
             <section>
-                <div>X</div>
-                <div>X</div>
-                <div>X</div>
+                <div id="b2" onclick="box_alert(2)"></div>
+                <div id="b5" onclick="box_alert(5)"></div>
+                <div id="b8" onclick="box_alert(8)"></div>
             </section>
             <section>
-                <div>O</div>
-                <div>X</div>
-                <div>X</div>
+                <div id="b3" onclick="box_alert(3)"></div>
+                <div id="b6" onclick="box_alert(6)"></div>
+                <div id="b9" onclick="box_alert(9)"></div>
             </section>
         </section>
     </main>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
