edit: text in winner div

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -21,7 +21,7 @@
                 <p>player 2 (<span id="x_win">0*</span>)</p>
             </span>
         </section>
-        <div id="winner">winner</div>
+        <div id="winner">start</div>
     </header>
     <main>
         <section onmouseup="console.log('on section')">
