creat: status game when one out of player won

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -11,14 +11,14 @@
         <section>
             <span id="oplayer">
                 <div>o</div>
-                <p>player 1 (<span id="o_win">0*</span>)</p>
+                <p>player 1 (<span id="o_win">0</span>)</p>
             </span>
             <span id="vs">
                 <div>vs</div>
             </span>
             <span id="xplayer">
                 <div>x</div>
-                <p>player 2 (<span id="x_win">0*</span>)</p>
+                <p>player 2 (<span id="x_win">0</span>)</p>
             </span>
         </section>
         <div id="winner">start</div>
