created: space to get player name

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -11,17 +11,17 @@
         <section>
             <span id="oplayer">
                 <div>o</div>
-                <p>player 1 (<span id="o_win"></span>)</p>
+                <span class="name_player" id="player_o">player 1</span> (<span id="o_win"></span>)
             </span>
             <span id="vs">
                 <div>vs</div>
             </span>
             <span id="xplayer">
                 <div>x</div>
-                <p>player 2 (<span id="x_win"></span>)</p>
+                <span class="name_player" id="player_x">player 2</span> (<span id="x_win"></span>)
             </span>
         </section>
-        <div id="winner">start</div>
+        <div id="winner">start!</div>
     </header>
     <main>
         <section>
