created: the pop-up to put player name

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -42,6 +42,22 @@
             </section>
         </section>
     </main>
+    <section id="pop-up">
+        <div>
+            <div>
+                <h2 id="title">names </h2><h2 id="cursor">|</h2>
+            </div>
+            <div>
+                <label for="iplayer_o" id="o_name">o</label>
+                <input type="text" name="player_o" id="iplayer_o">
+            </div>
+            <div>
+                <label for="iplayer_x" id="x_name">x</label>
+                <input type="text" name="player_x" id="iplayer_x">
+            </div>
+            <input type="button" value="play" translate="no">
+        </div>
+    </section>
     <script src="scripts/script.js"></script>
 </body>
 </html>
