creat: box shadow chager acordin to player

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -24,7 +24,7 @@
         <div id="winner">start!</div>
     </header>
     <main>
-        <section>
+        <section id="box">
             <section>
                 <div id="b1" onclick="box_alert(1)"></div> 
                 <div id="b4" onclick="box_alert(4)"></div>
