got the code clean.

--- a/xbol/index.html
+++ b/xbol/index.html
@@ -26,19 +26,19 @@
     <main>
         <section id="box">
             <section>
-                <div id="b1" onclick="box_alert(1)"></div> 
-                <div id="b4" onclick="box_alert(4)"></div>
-                <div id="b7" onclick="box_alert(7)"></div>
+                <div id="b1" onclick="boxAlert(1)"></div> 
+                <div id="b4" onclick="boxAlert(4)"></div>
+                <div id="b7" onclick="boxAlert(7)"></div>
             </section>
             <section>
-                <div id="b2" onclick="box_alert(2)"></div>
-                <div id="b5" onclick="box_alert(5)"></div>
-                <div id="b8" onclick="box_alert(8)"></div>
+                <div id="b2" onclick="boxAlert(2)"></div>
+                <div id="b5" onclick="boxAlert(5)"></div>
+                <div id="b8" onclick="boxAlert(8)"></div>
             </section>
             <section>
-                <div id="b3" onclick="box_alert(3)"></div>
-                <div id="b6" onclick="box_alert(6)"></div>
-                <div id="b9" onclick="box_alert(9)"></div>
+                <div id="b3" onclick="boxAlert(3)"></div>
+                <div id="b6" onclick="boxAlert(6)"></div>
+                <div id="b9" onclick="boxAlert(9)"></div>
             </section>
         </section>
     </main>
@@ -56,7 +56,7 @@
                 <input type="text" name="player_x" id="iplayer_x" maxlength="13" required>
             </div>
             <p id="warn"></p>
-            <input type="button" value="play" translate="no" id="iplay" onclick="name_player_form()">
+            <input type="button" value="play" translate="no" id="iplay">
         </div>
     </section>
     <script src="scripts/script.js"></script>
